--- a/applications-and-projects/application-with-private-repo-automated-prune.yaml
+++ b/applications-and-projects/application-with-private-repo-automated-prune.yaml
@@ -15,5 +15,7 @@ spec:
     directory:
       recurse: true
   syncPolicy:
+    automated:
+      prune: true
     syncOptions:
       - CreateNamespace=true
