--- a/applications-and-projects/application-kustomize.yaml
+++ b/applications-and-projects/application-kustomize.yaml
@@ -1,21 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kustomize-app
+  name: demo-app
   namespace: argocd
 spec:
   destination:
-    namespace: kustomize-app
+    namespace: demo-app
     server: "https://kubernetes.default.svc"
   project: default
   source:
     path: kustomize-guestbook
-    repoURL: "https://github.com/mabusaa/argocd-example-apps.git"
-    targetRevision: master
-    kustomize:
-      namePrefix: staging-
-      commonLabels:
-        app: demo
+    repoURL: "https://github.com/shreyanshs7/argocd-example-apps-private.git"
+    targetRevision: main
   syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
     syncOptions:
       - CreateNamespace=true
