--- a/kustomize-guestbook/docker-secret.yaml
+++ b/kustomize-guestbook/docker-secret.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   creationTimestamp: "2023-10-08T11:05:15Z"
   name: regcred
-  namespace: default
+  namespace: demo-app
   resourceVersion: "300154"
   uid: 4de422e1-4a9e-47dd-895f-ff80a1e43ae4
 type: kubernetes.io/dockerconfigjson
