--- a/v2/argocd/application.yaml
+++ b/v2/argocd/application.yaml
@@ -1,19 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook-private-app
+  name: demo-app
   namespace: argocd
 spec:
   destination:
-    namespace: guestbook-private-app
+    namespace: demo-app
     server: "https://kubernetes.default.svc"
   project: default
   source:
-    path: guestbook
+    path: v2
     repoURL: "https://github.com/shreyanshs7/argocd-example-apps-private.git"
     targetRevision: main
-    directory:
-      recurse: true
   syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
     syncOptions:
       - CreateNamespace=true
