--- a/v2/argocd/application.yaml
+++ b/v2/argocd/application.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     path: v2/overlays/staging
-    repoURL: "https://github.com/shreyanshs7/argocd-example-apps-private.git"
+    repoURL: "git@github.com:shreyanshs7/argocd-example-apps-private.git"
     targetRevision: main
   syncPolicy:
     automated:
