--- a/v2/overlays/hulk/kustomization.yaml
+++ b/v2/overlays/hulk/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namePrefix: staging-
+namePrefix: hulk-
 
-namespace: staging
+namespace: hulk
 
 resources:
 - ../../base/service-1
@@ -13,9 +13,9 @@ resources:
 labels:
 - includeSelectors: true
   pairs:
-    env: staging
+    env: hulk
 
-patches:
-  - path: service-1/deployment-patch.yaml
-  - path: service-2/deployment-patch.yaml
-  - path: service-3/deployment-patch.yaml
+# patches:
+#   - path: service-1/deployment-patch.yaml
+#   - path: service-2/deployment-patch.yaml
+#   - path: service-3/deployment-patch.yaml
