--- a/v2/base/service-1/kustomization.yaml
+++ b/v2/base/service-1/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - deployment.yaml
   - service.yaml
 
-configMapGenerator:
-- name: configmap-1
-  envs:
-  - configmap-1.env
+# configMapGenerator:
+# - name: configmap-1
+#   envs:
+#   - configmap-1.env
