added different thor base

--- a/v2/overlays/thor/service-2/deployment-patch.yaml
+++ b/v2/overlays/thor/service-2/deployment-patch.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: service-app-2
+  namespace: thor-platform
 spec:
   replicas: 2
   template:
