--- a/v2/overlays/thor/kustomization.yaml
+++ b/v2/overlays/thor/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- namespaces/thor-default.yaml
-- namespaces/thor-platform.yaml
+# - namespaces/thor-default.yaml
+# - namespaces/thor-platform.yaml
 - ../../thor-base/service-1
 - ../../thor-base/service-2
 - ../../thor-base/service-3
@@ -15,8 +15,8 @@ labels:
 
 
 patches:
-  - path: namespaces/thor-default.yaml
-  - path: namespaces/thor-platform.yaml
+  # - path: namespaces/thor-default.yaml
+  # - path: namespaces/thor-platform.yaml
   - path: service-1/deployment-patch.yaml
   - path: service-2/deployment-patch.yaml
   - path: service-3/deployment-patch.yaml
