--- a/v2/thor-base/service-1/service.yaml
+++ b/v2/thor-base/service-1/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1	
 kind: Service	
 metadata:	
-  name: service-app-1	
+  name: service-app-1
+  namespace: thor-default
 spec:	
   ports:	
   - port: 80	
