--- a/v2/thor-base/service-2/service.yaml
+++ b/v2/thor-base/service-2/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1	
 kind: Service	
 metadata:	
-  name: service-app-2	
+  name: service-app-2
+  namespace: thor-platform
 spec:	
   ports:	
   - port: 80	
