--- a/v3/staging/kustomization.yaml
+++ b/v3/staging/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namePrefix: staging-
+
 resources:
 - namespaces/hulk-accounts.yaml
 - namespaces/hulk-platform.yaml
