--- a/v3/staging/accounts/kustomization.yaml
+++ b/v3/staging/accounts/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: hulk-accounts
+namespace: staging-accounts
+namePrefix: accounts-
+
 
 resources:
 - ../../base/accounts
