--- a/v3/staging/platform/kustomization.yaml
+++ b/v3/staging/platform/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: hulk-platform
+namespace: staging-platform
+namePrefix: platform-
 
 resources:
 - ../../base/platform
